--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.1",
+    "@radix-ui/react-toast": "^1.2.2",
     "@radix-ui/react-tooltip": "^1.1.4",
     "axios": "^1.7.2",
     "chart.js": "^4.4.6",
@@ -25,6 +26,7 @@
     "formik": "^2.4.6",
     "input-otp": "^1.4.1",
     "lightweight-charts": "^4.1.6",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.462.0",
     "next": "14.2.4",
     "react": "^18",
@@ -38,6 +40,7 @@
     "zustand": "^5.0.2"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.13",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
