--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "main": "/dist/index.js",
   "scripts": {
-    "build": "npx esbuild src/index.ts --bundle --platform=node --outfile=dist/index.js --tsconfig=tsconfig.json",
+    "build": "npm run prisma:generate && npx esbuild src/index.ts --bundle --platform=node --outfile=dist/index.js --tsconfig=tsconfig.json",
     "start": "node dist/index.js",
     "dev": "npm run build && npm run start",
+    "prisma:generate": "prisma generate",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
