--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -6,7 +6,7 @@
     "build": "npm run prisma:generate && npx esbuild src/index.ts --bundle --platform=node --outfile=dist/index.js --tsconfig=tsconfig.json",
     "start": "node dist/index.js",
     "dev": "npm run build && npm run start",
-    "prisma:generate": "prisma generate",
+    "prisma:generate": "npx prisma generate",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -28,6 +28,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@types/nodemailer": "^6.4.17"
+    "@types/nodemailer": "^6.4.17",
+    "@prisma/client": "5.19.1"
   }
 }
