--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -7,8 +7,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "generate": "prisma generate",
-    "postinstall": "prisma generate"
+    "generate": "npx prisma generate",
+    "postinstall": "npx prisma generate"
   },
   "keywords": [],
   "author": "",
