--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -3,10 +3,9 @@
   "version": "1.0.0",
   "main": "/dist/index.js",
   "scripts": {
-    "build": "npm run prisma:generate && npx esbuild src/index.ts --bundle --platform=node --outfile=dist/index.js --tsconfig=tsconfig.json",
+    "build": "npx esbuild src/index.ts --bundle --platform=node --outfile=dist/index.js --tsconfig=tsconfig.json",
     "start": "node dist/index.js",
     "dev": "npm run build && npm run start",
-    "prisma:generate": "npx prisma generate",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -28,7 +27,6 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@types/nodemailer": "^6.4.17",
-    "@prisma/client": "5.19.1"
+    "@types/nodemailer": "^6.4.17"
   }
 }
