--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@prisma/client": "5.19.1",
     "@repo/db": "workspace:*",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
@@ -23,6 +24,7 @@
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^6.9.16",
+    "prisma": "^6.0.1",
     "typescript": "^5.6.3",
     "zod": "^3.23.8"
   },
