--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -13,7 +13,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@repo/db": "workspace:*",
+    "@prisma/client": "5.19.1",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.7",
