--- a/apps/frontend/Dockerfile
+++ b/apps/frontend/Dockerfile
@@ -3,10 +3,13 @@ FROM node:18-alpine
 WORKDIR /app
 
 COPY package*.json ./
+
 RUN npm install
 
 COPY . .
 
-EXPOSE 3129
+RUN npm run build
 
-CMD ["node", "index.js"]
+EXPOSE 3000
+
+CMD ["npm", "start"]
